# altaris-hw-avr

./: CMakeLists.txt  README.md  generic-gcc-avr.cmake
DHT11/: CMakeLists.txt  dht11.cpp  dht11.h
DS1820/: CMakeLists.txt  ds1820.cpp  ds1820.h
RF24/: CMakeLists.txt  RF24.cpp  RF24.h  hardware.cpp  nRF24L01.h
RF24-Arduino/: CMakeLists.txt  RF24-arduino.cpp  RF24-arduino.h
SPI/: CMakeLists.txt  spi.cpp  spi.h
SoftUART/: CMakeLists.txt  softuart.cpp  softuart.h  softuart_native.cpp  softuart_native.h
UART/: CMakeLists.txt  uart-async-native.cpp  uart-async.cpp  uart-async.h  uart-sync-native.cpp  uart-sync-native.h  uart-sync.cpp  uart-sync.h  uart.cpp  uart.h  uart_native.cpp  uart_native.h
altaris-host/: CMakeLists.txt  altaris-host.cpp  altaris-host.h  esp-network.cpp  esp-network.h
altaris-module/: CMakeLists.txt  altaris-module.cpp  altaris-module.h
altaris-module-cfg-1/: CMakeLists.txt  module-cfg.cpp
altaris-module-cfg-2/: CMakeLists.txt  module-cfg.cpp
altaris-module-core/: CMakeLists.txt  altaris-module-core.cpp  altaris-module-core.h
hardware/: CMakeLists.txt  hardware.cpp  hardware.h  pins.cpp  pins.h
utils/: CMakeLists.txt  binary.h  pins.cpp  pins.h  print.cpp  print.h  wiring.cpp  wiring.h
wdt_power/: CMakeLists.txt  wdt_power.cpp  wdt_power.h
